# databricks_genai_hackt

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
heb_databricks_genai/: .env  __init__.py  __main__.py  multimodel_chatbot.py
heb_databricks_genai/productSearch/: prodsearchAgent.py
notebooks/examples/load-secrets/: load-secrets.ipynb
tests/unittest/: test_sample.py
